# melsec_mc_mock

./: CHANGELOG.md  Cargo.toml  PR_BODY.md  README.en.md  README.md
.github/: copilot-instructions.md
.github/PULL_REQUEST_TEMPLATE/: release_pr.md
.github/workflows/: build-release-macos.yml  build-release.yml  ci.yml  frontend-ci.yml  monorepo-sync-template.yml  publish.yml
docs/: PR_refactor_mc_constants.md  commands.md  legacy_mc3e.md  mock_server.md  mock_server_ja.md  registry_policy.md  release_artifacts.md
examples/: cross_protocol_demo.rs  do_write_m20.rs  dump_words.rs  echo_probe.rs  parse_frame.rs  read_f32_range.rs  read_f32_test.rs  simple.rs  write_various_types.rs
melsec_mc_core/: .gitignore  .sync-trigger  Cargo.toml  build.rs
melsec_mc_core/src/: command_registry.rs  commands.rs  commands.toml  config.rs  device.rs  device_code.rs  device_registry.rs  devices.toml  endpoint.rs  error.rs  error_codes.rs  error_codes.toml  lib.rs  mc_client.rs  mc_define.rs  mc_frame.rs  plc_series.rs  request.rs  response.rs  test_utils.rs  toml_helpers.rs  transport.rs
melsec_mc_core/tests/: command_registry_tests.rs  decode_read_bits_m0_20.rs  device_registry_oncecell.rs  diag_build_write_bits.rs  diag_write_packing_comparison.rs  echo_boundaries.rs  echo_integration.rs  error_codes_merge.rs  parallel_read_only.rs  parallel_real_rw.rs  parse_read_bits.rs  read_d0.rs  single_write_bit.rs  single_write_nibbles.rs  single_write_words.rs  transport_tests.rs
melsec_mc_core/tests/real/: real_device_flip_m20_m30.rs  real_device_packing_variants.rs  real_device_tests.rs  real_integration_m0_word_as_bits.rs  real_mc_format.rs  real_read_m0_word_decode.rs  real_read_m0_words.rs  real_write_4bit_m0_1.rs  real_write_and_verify_m0_19.rs
(+10 files in other folders)
